--- a/E-commerce-ASP/Views/Shared/_HomeLayout.cshtml
+++ b/E-commerce-ASP/Views/Shared/_HomeLayout.cshtml
@@ -175,13 +175,20 @@
                                                 <li class="active">@Html.ActionLink("Home", "Index", "Home")</li>
                                                 @if (Request.IsAuthenticated)
                                                 {
-                                                    <li>@Html.ActionLink("My Products", "MyProducts", "Proprietaire")</li>
                                                     <li>@Html.ActionLink("Add Product", "AddProduct", "Proprietaire")</li>
+                                                }
+                                                @if (Request.IsAuthenticated && !User.IsInRole("Admin"))
+                                                {
+                                                    <li>@Html.ActionLink("My Products", "MyProducts", "Proprietaire")</li>
                                                     <li>@Html.ActionLink("Historique", "Historique", "Proprietaire")</li>
                                                     <li>@Html.ActionLink("Declare A Problem", "DeclareProblem", "Proprietaire")</li>
                                                 }
+                                                @if (User.IsInRole("Admin"))
+                                                {
+                                                    <li>@Html.ActionLink("Admin DashBoard", "DashBoard", "Admin")</li>
+                                                }
                                                 <li>@Html.ActionLink("Statistique", "Statistique", "Home")</li>
-                                                <li>@Html.ActionLink("Contact Us", "Contact", "Home")</li>
+                                                <li>@Html.ActionLink("About Us", "About", "Home")</li>
 
                                             </ul>
                                         </div>
