--- a/E-commerce-ASP/Views/Home/Index.cshtml
+++ b/E-commerce-ASP/Views/Home/Index.cshtml
@@ -410,7 +410,7 @@
 
                         </table>
 
-                        <div class="detailText">@Html.ActionLink("Voir les détails de Produit ", "Index","Product")</div>
+                        <div class="detailText">@Html.ActionLink("Voir les détails de Produit ", "Index","Product", new { Id = item.Id })</div>
 
 
                     </div>
