--- a/E-commerce-ASP/Views/Shared/_AdminLayout.cshtml
+++ b/E-commerce-ASP/Views/Shared/_AdminLayout.cshtml
@@ -55,7 +55,7 @@
                         <div class="sb-sidenav-menu-heading">Settings</div>
                         <a class="nav-link" href="~/Admin/Historique">
                             <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
-                            Historique Utilisateur
+                            Historique Produits
                         </a>
                         <a class="nav-link" href="~/Admin/DetailUtilisateur">
                             <div class="sb-nav-link-icon"><i class="fas fa-chart-area"></i></div>
@@ -83,7 +83,7 @@
             <footer class="py-4 bg-light mt-auto">
                 <div class="container-fluid px-4">
                     <div class="d-flex align-items-center justify-content-between small">
-                        <div class="text-muted">Copyright &copy; Your Website 2021</div>
+                        <div class="text-muted">Copyright &copy; E-Shop@ensaf.usmba.ma</div>
                         <div>
                             <a href="#">Privacy Policy</a>
                             &middot;
