--- a/E-commerce-ASP/Views/Account/CompanyParameters.cshtml
+++ b/E-commerce-ASP/Views/Account/CompanyParameters.cshtml
@@ -2,7 +2,7 @@
 
 @{
     ViewBag.Title = "CompanyParameters";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Views/Shared/_HomeLayout.cshtml";
 }
 
 @using (Html.BeginForm("CompanyParameters", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
