--- a/E-commerce-ASP/Views/Account/ParticularParameters.cshtml
+++ b/E-commerce-ASP/Views/Account/ParticularParameters.cshtml
@@ -2,7 +2,7 @@
 
 @{
     ViewBag.Title = "ParticularParameters";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Views/Shared/_HomeLayout.cshtml";
 }
 
 <script src="~/Scripts/jquery-3.4.1.min.js"></script>
