--- a/E-commerce-ASP/Views/Admin/Index.cshtml
+++ b/E-commerce-ASP/Views/Admin/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<E_commerce_ASP.Models.Products>
+﻿@model IEnumerable<E_commerce_ASP.Models.Product>
 
 @{
     ViewBag.Title = "Admin Index";
