--- a/E-commerce-ASP/Views/Admin/ListeNoire.cshtml
+++ b/E-commerce-ASP/Views/Admin/ListeNoire.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<E_commerce_ASP.Models.AspNetUsers>
+﻿@model IEnumerable<E_commerce_ASP.Models.User>
 @{
     ViewBag.Title = "ListeNoirs";
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
