--- a/E-commerce-ASP/Views/Admin/Historique.cshtml
+++ b/E-commerce-ASP/Views/Admin/Historique.cshtml
@@ -41,17 +41,25 @@
                         @foreach (var item in Model)
                         {
 
-                            <tr>
-                                <td>@item.NameProduct</td>
-                                <td>@item.IdProduct</td>
-                                <td>@item.Name</td>
-                                <td>@item.Date.ToString()</td>
-                                <td>@item.Transaction</td>
-                            </tr>
+                        <tr>
+                            <td>@item.Product.Name</td>
+                            <td>@item.Product.Id</td>
+                            @if (item.User.Nature.Equals("Particular"))
+                            {
+                                <td>@item.User.FirstName @item.User.LastName</td>
+                            }
+                            else
+                            {
+                                <td>@item.User.CompanyName</td>
+                            }
+
+                            <td>@item.Date.ToString()</td>
+                            <td>@item.Transaction</td>
+                        </tr>
                         }
 
 
-                        </tbody>
+                    </tbody>
                 </table>
             </div>
         </div>
