--- a/E-commerce-ASP/Views/Proprietaire/AddProduct.cshtml
+++ b/E-commerce-ASP/Views/Proprietaire/AddProduct.cshtml
@@ -31,33 +31,39 @@
                             <h4>Add Product</h4>
                             <h3>Specify your product details please</h3>
                         </div>
-                        @using (Html.BeginForm("AddProduct", "Proprietaire", FormMethod.Post))
+                        @using (Html.BeginForm("AddProduct", "Proprietaire", FormMethod.Post,
+                            new { enctype = "multipart/form-data" }))
                         {
                             @Html.AntiForgeryToken()
+
+                            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
                             <div class="row">
                                 <div class="col-lg-6 col-12">
                                     <div class="form-group">
-                                        <label>Product Name<span></span></label>
-                                        <input name="name" type="text" placeholder="">
+                                        @Html.LabelFor(m => m.Name, new { @class = "control-label" })
+                                        @Html.TextBoxFor(m => m.Name)
+                                        @Html.ValidationMessageFor(m => m.Name, "", new { @class = "text-danger" })
                                     </div>
                                 </div>
                                 <div class="col-lg-6 col-12">
                                     <div class="form-group">
-                                        <label>Product price<span></span></label>
-                                        <input name="price" type="text" placeholder="">
+                                        @Html.LabelFor(m => m.Price, new { @class = "control-label" })
+                                        @Html.TextBoxFor(m => m.Price)
+                                        @Html.ValidationMessageFor(m => m.Price, "", new { @class = "text-danger" })
                                     </div>
                                 </div>
                                 <div class="col-lg-6 col-12">
                                     <div class="form-group">
-                                        <label>Category<span></span></label>
+                                        @Html.LabelFor(m => m.Category, new { @class = "control-label" })
                                         <br />
-                                        @Html.DropDownList("x", ViewBag.e as SelectList, "Selectioner Category", new { htmlAttributes = new { @class = "form-control" } })
+                                        @Html.DropDownListFor(m => m.CategoryId, ViewBag.CategoryList as SelectList, "Selectioner Category", new { htmlAttributes = new { @class = "form-control" } })
+                                        @Html.ValidationMessageFor(model => model.CategoryId, "", new { @class = "text-danger" })
                                     </div>
                                 </div>
                                 <div class="col-lg-6 col-12">
                                     <div class="form-group">
-                                        <label>Choisissez uneImage<span></span></label>
+                                        <label>Choisissez une Image<span></span></label>
                                         <input type="file" name="upload">
                                     </div>
                                 </div>
